# dyz-shm

./: CMakeLists.txt  cairo.hh  dyz-shm.cpp  pixman.hh  simplegfx.hh
cmake/: FindWPE.cmake
